--- a/pages/CustomsSystems-1.html
+++ b/pages/CustomsSystems-1.html
@@ -8,20 +8,20 @@
 <body>
 <nav>
     <ul class="topmenu">
-        <li><a href="pages/CustomsSystems-1.html">Таможенные Системы</a></li>
+        <li><a href="CustomsSystems-1.html">Таможенные Системы</a></li>
         <li><a>Наши услуги</a>
             <ul class="submenu">
-                <li><a href="pages/CombinedCargo-2.html">СБОРНЫЕ ГРУЗЫ</a></li>
-                <li><a href="pages/CustomsService-2-1.html">КОМПЛЕКС ПО ТАМОЖЕННОМУ ВЭД</a></li>
-                <li><a href="pages/CustomsService-2-2.html">ТАМОЖЕННОЕ ОФОРМЛЕНИЕ ГРУЗОВ В БЕЛОРУССИИ </a></li>
-                <li><a href="pages/CustomsService-2-3.html">СЕРТИФИКАЦИЯ</a></li>
-                <li><a href="pages/CustomsService-2-4.html">МЕЖДУНАРОДНЫЕ ПЕРЕВОЗКИ</a></li>
-                <li><a href="pages/CustomsService-2-5.html">СТРАХОВАНИЕ ГРУЗОВ </a></li>
-                <li><a href="pages/CustomsService-2-6.html">ФИНАНСОВЫЕ УСЛУГИ </a></li>
+                <li><a href="CombinedCargo-2.html">СБОРНЫЕ ГРУЗЫ</a></li>
+                <li><a href="CustomsService-2-1.html">КОМПЛЕКС ПО ТАМОЖЕННОМУ ВЭД</a></li>
+                <li><a href="CustomsService-2-2.html">ТАМОЖЕННОЕ ОФОРМЛЕНИЕ ГРУЗОВ В БЕЛОРУССИИ </a></li>
+                <li><a href="CustomsService-2-3.html">СЕРТИФИКАЦИЯ</a></li>
+                <li><a href="CustomsService-2-4.html">МЕЖДУНАРОДНЫЕ ПЕРЕВОЗКИ</a></li>
+                <li><a href="CustomsService-2-5.html">СТРАХОВАНИЕ ГРУЗОВ </a></li>
+                <li><a href="CustomsService-2-6.html">ФИНАНСОВЫЕ УСЛУГИ </a></li>
             </ul>
         </li>
-        <li><a href="pages/make-request.html">Оформите заявку</a></li>
-        <li><a href="pages/contact.html">Наши контакты</a></li>
+        <li><a href="make-request.html">Оформите заявку</a></li>
+        <li><a href="contact.html">Наши контакты</a></li>
     </ul>
 </nav>
 
