--- a/index.html
+++ b/index.html
@@ -94,15 +94,15 @@
 
             <div class="photo">
 
-                <img src="/img/qwe.jpg">
+                <img src="/img/footer-img-1.jpg">
                 <a>"От 1 кг" </a>
             </div>
             <div class="photo">
-                <img src="/img/asd.jpg">
+                <img src="/img/footer-img-2.jpg">
                 <a>"Проверенные каналы"</a>
             </div>
             <div class="photo">
-                <img src="/img/zxc.jpg">
+                <img src="/img/footer-img-3.jpg">
                 <a>"От двери до двери"</a>
             </div>
         </div>
