--- a/index.html
+++ b/index.html
@@ -94,15 +94,20 @@
 
             <div class="photo">
 
-                <img src="/img/footer-img-1.jpg">
+                <div class="footer-img-1"> </div>
+
                 <a>"От 1 кг" </a>
             </div>
             <div class="photo">
-                <img src="/img/footer-img-2.jpg">
+
+                <div class="footer-img-2"> </div>
+
                 <a>"Проверенные каналы"</a>
             </div>
             <div class="photo">
-                <img src="/img/footer-img-3.jpg">
+
+                <div class="footer-img-3"> </div>
+
                 <a>"От двери до двери"</a>
             </div>
         </div>
