--- a/VD-Complex-2.html
+++ b/VD-Complex-2.html
@@ -13,7 +13,6 @@
             crossorigin="anonymous">
 
     </script>
-
 </head>
 <body>
     <div class="customs-systems">
@@ -68,7 +67,22 @@
                 <h2 class="title-block">Финансовые услуги</h2>
             </div>
         </div>
-        <div class="block-text"></div>
+        <div class="block-text">
+            <div class="left-text">
+                Комплекс по таможенному обслуживанию участников ВЭД, предлагаемый нашей компанией, включает в себя:
+            </div>
+            <div class="right-text">
+                <p>1)Предварительный расчет таможенных платежей и сборов</p>
+                <p>2)Подготовка необходимых документов и оформление грузовой тамоможенной декларации</p>
+                <p>3)Разгрузка – выгрузка грузов на СВХ; </p>
+                <p>4)Хранение грузов на СВХ; </p>
+                <p>5)Консультации по общим и специальным вопросам таможенного оформления;</p>
+                <p>6)Решение спорных вопросов;</p>
+                <p>7)Электронное Предварительное Информирование (ЭПИ)</p>
+                <p>8)Услуга Поручительства; </p>
+                <p>9)Оформление Электронной Транзитной Декларации (ЭТД) </p>
+            </div>
+        </div>
         <div class="request"><i class="fa fa-comments fa-3x" aria-hidden="true"><br>Оставить заявку</i>
             <form class="request-form">
                 <input name="email" placeholder="Укажите ваш Email!" class="textbox" type="email" required/>
